--- a/blog.html
+++ b/blog.html
@@ -8,108 +8,134 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
-        rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/style.css">
 
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-
-    <!-- Bootstrap css -->
-    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">
-
-
-    <!-- Libraries CSS Files -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.theme.default.min.css" rel="stylesheet">
-    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/modal-video/css/modal-video.min.css" rel="stylesheet">
-
-    <!-- Main Stylesheet File -->
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- Name: MTENDERE education consultancy -->
 </head>
 
 <body>
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-dark">
-        <div class="row py-2 px-lg-5">
-            <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
-                <div class="d-inline-flex align-items-center text-white">
-                    <small><i class="fa fa-phone-alt mr-2"></i></small>
-                    <small class="px-3">|+265 999 360 325</small>
-                    <small><i class="fa fa-envelope mr-2"></i> mtendereeduconsult@gmail.com</small>
-                </div>
+    <div class="site-mobile-menu">
+        <div class="site-mobile-menu-header">
+            <div class="site-mobile-menu-close">
+                <span class="icofont-close js-menu-toggle"></span>
             </div>
-            <div class="col-lg-6 text-center text-lg-right">
-                <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a class="text-white px-2" href="">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-white pl-2" href="">
-                        <i class="fab fa-youtube"></i>
-                    </a>
+        </div>
+        <div class="site-mobile-menu-body"></div>
+    </div>
+
+
+
+    <nav class="site-nav mb-5">
+        <div class="pb-2 top-bar mb-3">
+            <div class="container">
+                <div class="row align-items-center">
+
+                    <div class="col-6 col-lg-9">
+                        <a href="#" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
+                                class="d-none d-lg-inline-block">Have a questions?</span></a>
+                        <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span
+                                class="d-none d-lg-inline-block">
+
+                            </span></a>
+                        <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span
+                                class="d-none d-lg-inline-block">info@mydomain.com</span></a>
+                    </div>
+
+                    <div class="col-6 col-lg-3 text-right">
+                        <a href="login.html" class="small mr-3">
+                            <span class="icon-lock"></span>
+                            Log In
+                        </a>
+                        <a href="register.html" class="small">
+                            <span class="icon-person"></span>
+                            Register
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Topbar End -->
-
-    <!-- Navbar Start -->
-    <nav class="fh5co-nav" role="navigation">
-		<div class="top-menu">
-			<div class="container">
-				<div class="row">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="images/logo.png" alt="" />
-                        <div id="fh5co-logo"><a href="index.html">Mtendere<span>Consult.Edu</span></a></div>
+        <div class="sticky-nav js-sticky-header">
+            <div class="container position-relative">
+                <div class="site-navigation text-center">
+                    <a href="index.html" class="logo menu-absolute m-0">
+                        <img src="img/Mtendere_logo.png" alt="Image" class="img-fluid">
                     </a>
-					<div class="col-xs-11 text-right menu-1">
-						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="scholarships.html">Scholarships</a></li>
-							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
-							</li>
-                            <li class="has-dropdown">
-								<a href="blog.html">More</a>
-								<ul class="dropdown">
-									<li><a href="#">Gallery</a></li>
-									<li><a href="#">Faculty</a></li>
-									<li><a href="#">Team</a></li>
-                                    <li><a href="#">Pricing</a></li>
 
-								</ul>
-							</li>
-							<li><a href="contact.html">Contact</a></li>
-							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
-						</ul>
-					</div>
-				</div>
-				
-			</div>
-		</div>
-	</nav>
+                    <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="courses.html">Scholarships</a></li>
+                        <li class="has-children">
+                            <a href="#">Universities</a>
+                            <ul class="dropdown">
+                                <li><a href="elements.html">Partners</a></li>
+                                <li><a href="#">Chandigarh University</a></li>
+                                <li><a href="#">Parul University</a></li>
+                                <li><a href="#">CT University</a></li>
+                                <li><a href="#">Shoolin University</a></li>
+                                <li><a href="#">Jain University</a></li>
+                                <li><a href="#">Royal Global University</a></li>
+                                <li><a href="#">Symboisis University</a></li>
+                                <li><a href="#">Galgocia University</a></li>
+                                <li><a href="#">Noida University</a></li>
+                                <li><a href="#">Khalsa College</a></li>
+                                <li><a href="#">Lovey Professional University</a></li>
+                                <li class="has-children">
+                                    <a href="#">GEDU GLOBAL</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">GBS Dubai</a></li>
+                                        <li><a href="#">St Julians</a></li>
+                                        <li><a href="#">Plymouth, MLA College</a></li>
+                                        <li><a href="#">Schiller International University</a></li>
+                                        <li><a href="#">Ecole de Management EMA</a></li>
+                                        <li><a href="#">Austrtian Perfoming Arts Conservatory</a></li>
+                                        <li><a href="#">Cyprus International University</a></li>
+                                        <li><a href="#">Cyprus West University</a></li>
+                                    </ul>
+                                </li>
+                                <li class="has-children">
+                                    <a href="#">MSM UNIFY</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">University of Niagara Faals</a></li>
+                                        <li><a href="#">University of Victoria</a></li>
+                                        <li><a href="#">Kwantlen</a></li>
+                                        <li><a href="#">University of Wolverhampton</a></li>
+                                        <li><a href="#">Webster University</a></li>
+                                        <li><a href="#">Dublin College</a></li>
+                                        <li><a href="#">Seatle Central College</a></li>
+                                        <li><a href="#">Thompson Rivers University</a></li>
+                                        <li><a href="#">University of Greenwish</a></li>
+                                    </ul>
+                                </li>
+
+                            </ul>
+                        </li>
+                        <li><a href="staff.html">Our Staff</a></li>
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+
+                    <a href="#" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
+
+                    <a href="#"
+                        class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
+                        data-toggle="collapse" data-target="#main-navbar">
+                        <span></span>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <!-- Training Start -->
     <div class="container-fluid training py-5">
