--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                         <a href="#" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span
                                 class="d-none d-lg-inline-block">Have a questions?</span></a>
                         <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span
-                                class="d-none d-lg-inline-block">10 20 123 456</span></a>
+                                class="d-none d-lg-inline-block">
+
+                            </span></a>
                         <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span
                                 class="d-none d-lg-inline-block">info@mydomain.com</span></a>
                     </div>
@@ -63,23 +65,56 @@
         <div class="sticky-nav js-sticky-header">
             <div class="container position-relative">
                 <div class="site-navigation text-center">
-                    <a href="index.html" class="logo menu-absolute m-0">Learner<span class="text-primary">.</span></a>
+                    <a href="index.html" class="logo menu-absolute m-0">
+                        <img src="img/Mtendere_logo.png" alt="Image" class="img-fluid">
+                    </a>
 
                     <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
                         <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="courses.html">Scholarships</a></li>
                         <li class="has-children">
-                            <a href="#">Dropdown</a>
+                            <a href="#">Universities</a>
                             <ul class="dropdown">
-                                <li><a href="elements.html">Elements</a></li>
+                                <li><a href="elements.html">Partners</a></li>
+                                <li><a href="#">Chandigarh University</a></li>
+                                <li><a href="#">Parul University</a></li>
+                                <li><a href="#">CT University</a></li>
+                                <li><a href="#">Shoolin University</a></li>
+                                <li><a href="#">Jain University</a></li>
+                                <li><a href="#">Royal Global University</a></li>
+                                <li><a href="#">Symboisis University</a></li>
+                                <li><a href="#">Galgocia University</a></li>
+                                <li><a href="#">Noida University</a></li>
+                                <li><a href="#">Khalsa College</a></li>
+                                <li><a href="#">Lovey Professional University</a></li>
                                 <li class="has-children">
-                                    <a href="#">Menu Two</a>
+                                    <a href="#">GEDU GLOBAL</a>
                                     <ul class="dropdown">
-                                        <li><a href="#">Sub Menu One</a></li>
-                                        <li><a href="#">Sub Menu Two</a></li>
-                                        <li><a href="#">Sub Menu Three</a></li>
+                                        <li><a href="#">GBS Dubai</a></li>
+                                        <li><a href="#">St Julians</a></li>
+                                        <li><a href="#">Plymouth, MLA College</a></li>
+                                        <li><a href="#">Schiller International University</a></li>
+                                        <li><a href="#">Ecole de Management EMA</a></li>
+                                        <li><a href="#">Austrtian Perfoming Arts Conservatory</a></li>
+                                        <li><a href="#">Cyprus International University</a></li>
+                                        <li><a href="#">Cyprus West University</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Menu Three</a></li>
+                                <li class="has-children">
+                                    <a href="#">MSM UNIFY</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">University of Niagara Faals</a></li>
+                                        <li><a href="#">University of Victoria</a></li>
+                                        <li><a href="#">Kwantlen</a></li>
+                                        <li><a href="#">University of Wolverhampton</a></li>
+                                        <li><a href="#">Webster University</a></li>
+                                        <li><a href="#">Dublin College</a></li>
+                                        <li><a href="#">Seatle Central College</a></li>
+                                        <li><a href="#">Thompson Rivers University</a></li>
+                                        <li><a href="#">University of Greenwish</a></li>
+                                    </ul>
+                                </li>
+
                             </ul>
                         </li>
                         <li><a href="staff.html">Our Staff</a></li>
@@ -101,7 +136,6 @@
             </div>
         </div>
     </nav>
-
 
     <div class="untree_co-hero overlay" style="background-image: url('images/hero-img-1-min.jpg');">
 
@@ -731,7 +765,6 @@
             </div>
         </div>
     </div> <!-- /.untree_co-section -->
-    <!-- Footer -->
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
         <div class="footer__parralax">
@@ -816,6 +849,7 @@
     </div>
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+    <!-- Footer End -->
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/popper.min.js"></script>
